# kangavisa

./: .gitignore  ANTIGRAVITY_KICKOFF_PROMPT.md  DECISIONS.md  HANDOVER.md  KangaVisa_Brand_Guidelines_v1.0.md  PRD_KangaVisa_v1.2.md  README.md  WALKTHROUGH.md  daas_metric_hypotheses.md  daas_user_stories.md  implementation_plan.md.resolved  kangavisa_system_architecture.md  migrations_20260301_daas_consent_and_analytics.sql  narrative_scaffolding_pack.md  seed_patterns_flags_checklists.md
.github/workflows/: ci.yml
app/: .env.local.example  middleware.ts  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  manifest.ts  page.module.css  page.tsx
app/email-templates/: README.md  email-change.html  reset-password.html  (+1 more)
kb/: architecture.md  evidence_item.jsonschema  flag_template.jsonschema  govdata_metric_mapping.md  instrument.jsonschema  kb_seed_flag_library.md  release_process.md  requirement.jsonschema  runbook.md  schema.sql  skills.md  sources.yml  testcases.md  ui_content_cards_system_insights.md  visa_system_snapshot_2024_25.md
migrations/: seed_kb_v1.sql
scripts/: generate_seed_sql.py
workers/: .env.example  pyproject.toml  run_frl_watch.py  run_watchers.py
workers/kangavisa_workers/: __init__.py  datagov_watcher.py  db.py  frl_watcher.py  homeaffairs_watcher.py  impact_scorer.py  schema_validator.py  seed_loader.py
workers/tests/: __init__.py  conftest.py  test_datagov_watcher.py  test_db.py  test_frl_watcher.py  test_homeaffairs_watcher.py  test_impact_scorer.py  test_schema_validation.py  test_seed_loader.py
(+150 files in other folders)
