[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kangavisa-workers"
version = "0.1.0"
description = "KangaVisa ingestion workers — FRL, Home Affairs, data.gov.au"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
    "jsonschema>=4.23",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kangavisa_workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
